update file downloads to use new github

--- a/index.html
+++ b/index.html
@@ -59,14 +59,14 @@ Source license.</p>
       format). Alternatively, find the <a href="doc-index.html">Table of
         Contents</a> here on the web site.</p>
 
-  <h2><a name="SECTid0x80bd158">Downloads</a></h2><p>The latest tDOM source release is <a href="files/tDOM-0.8.3.tgz">tDOM-0.8.3</a> (967k gzip tar archive)</p>
-<p>tDOM-0.8.2 is also avaliable as <a href="files/tDOM-0.8.2-win32.zip">win32 DLLs</a> (267k zip archive, 2007-08-14)</p><p>tDOM is included into ActiveStates <a href="http://aspn.activestate.com/ASPN/Downloads/ActiveTcl/">ActiveTcl</a> (a 'batteries included' binary Tcl/Tk distribution, avaliable for several plattforms) as well as into Daniel Steffen <a href="http://tcltkaqua.sourceforge.net/">Tcl/Tk Aqua</a> (a 'batteries included' binary distribution of the Mac OS X native Tcl/Tk)</p><p>Bernard Desgraupes provides <a href="http://webperso.easyconnect.fr/bdesgraupes/tcl.html#tdomlib">Mac
+  <h2><a name="SECTid0x80bd158">Downloads</a></h2><p>The latest tDOM source release is <a href="https://github.com/downloads/tDOM/tdom/tDOM-0.8.3.tgz">tDOM-0.8.3</a> (967k gzip tar archive)</p>
+<p>tDOM-0.8.2 is also avaliable as <a href="https://github.com/downloads/tDOM/tdom/tDOM-0.8.2-win32.zip">win32 DLLs</a> (267k zip archive, 2007-08-14)</p><p>tDOM is included into ActiveStates <a href="http://aspn.activestate.com/ASPN/Downloads/ActiveTcl/">ActiveTcl</a> (a 'batteries included' binary Tcl/Tk distribution, avaliable for several plattforms) as well as into Daniel Steffen <a href="http://tcltkaqua.sourceforge.net/">Tcl/Tk Aqua</a> (a 'batteries included' binary distribution of the Mac OS X native Tcl/Tk)</p><p>Bernard Desgraupes provides <a href="http://webperso.easyconnect.fr/bdesgraupes/tcl.html#tdomlib">Mac
 binaries</a> for OS X as well as for Mac Classic (OS 8/9).</p><p>If you want to use a tDOM Starkit, there are either Chuck Ferrils <a href="http://wcferril.home.mchsi.com/index.html">tdom.kit</a> (it
 supports Linux, FreeBSD and MS Windows) or the tcl extension
 collection <a href="http://www.equi4.com/kitten">kitten.kit</a>, which also
 includes tDOM.</p>
 
-  <h2><a name="SECTid0x80bde28">GitHub</a></h2><p>The tDOM GitHub respository is available at <a href="http://github.com/makr/tdom">http://github.com/makr/tdom</a></p>
+  <h2><a name="SECTid0x80bde28">GitHub</a></h2><p>The tDOM GitHub respository is available at <a href="https://github.com/tDOM/tdom">https://github.com/tDOM/tdom</a></p>
 
   <h2><a name="SECTid0x80d3140">Mailing List</a></h2><p>The place for tDOM related discussions and questions is the tDOM mailing
 list. See <a href="http://groups.yahoo.com/group/tdom/">http://groups.yahoo.com/group/tdom/</a> for the archive and subscribing information.</p>
