link to issue tracker

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 </head><body>
 <div class="header">
 <div class="navbar" align="center">
-<a href="#SECTid0x80a8258">NAME</a> · <a href="#SECTid0x80e3c50">Introduction</a> · <a href="#SECTid0x80bca38">Licence</a> · <a href="#SECTid0x80bcd98">Documentation</a> · <a href="#SECTid0x80bd158">Downloads</a> · <a href="#SECTid0x80bde28">GitHub</a> · <a href="#SECTid0x80d3140">Mailing List</a> · <a href="#SECTid0x80d3490">Further Readings</a>
+<a href="#SECTid0x80a8258">NAME</a> · <a href="#SECTid0x80e3c50">Introduction</a> · <a href="#SECTid0x80bca38">Licence</a> · <a href="#SECTid0x80bcd98">Documentation</a> · <a href="#SECTid0x80bd158">Downloads</a> · <a href="#SECTid0x80bde28">GitHub</a> · <a href="#SECTid0x80bde29">Issues</a> · <a href="#SECTid0x80d3140">Mailing List</a> · <a href="#SECTid0x80d3490">Further Readings</a>
 </div><hr class="navsep">
 </div><div class="body">
   <h2><a name="SECTid0x80a8258">NAME</a></h2><p class="namesection">
@@ -67,6 +67,8 @@ collection <a href="http://www.equi4.com/kitten">kitten.kit</a>, which also
 includes tDOM.</p>
 
   <h2><a name="SECTid0x80bde28">GitHub</a></h2><p>The tDOM GitHub respository is available at <a href="https://github.com/tDOM/tdom">https://github.com/tDOM/tdom</a></p>
+
+  <h2><a name="SECTid0x80bde29">Issues</a></h2><p>Bugs, issues, enhancement requests, and other concerns can be reported on the GitHub issue tracker at <a href="https://github.com/tDOM/tdom/issues">https://github.com/tDOM/tdom/issues</a></p>
 
   <h2><a name="SECTid0x80d3140">Mailing List</a></h2><p>The place for tDOM related discussions and questions is the tDOM mailing
 list. See <a href="http://groups.yahoo.com/group/tdom/">http://groups.yahoo.com/group/tdom/</a> for the archive and subscribing information.</p>
