change encoding of html-files to utf-8

--- a/domDoc.html
+++ b/domDoc.html
@@ -4,7 +4,7 @@
 </head><body>
 <div class="header">
 <div class="navbar" align="center">
-<a href="#SECTid0x80a9c60">NAME</a> · <a href="#SECTid0x80c1d70">SYNOPSIS</a> · <a href="#SECTid0x80a6248">DESCRIPTION </a> · <a href="#SECTid0x80b9808">SEE ALSO</a> · <a href="#SECTid0x80b9a28">KEYWORDS</a>
+<a href="#SECTid0x80a9c60">NAME</a> Â· <a href="#SECTid0x80c1d70">SYNOPSIS</a> Â· <a href="#SECTid0x80a6248">DESCRIPTION </a> Â· <a href="#SECTid0x80b9808">SEE ALSO</a> Â· <a href="#SECTid0x80b9a28">KEYWORDS</a>
 </div><hr class="navsep">
 </div><div class="body">
   <h2><a name="SECTid0x80a9c60">NAME</a></h2><p class="namesection">
@@ -560,9 +560,9 @@ document gets deleted.</p>
 </div><div class="footer">
 <hr class="navsep"><!-- footer.html: Standard navigational footer --><div class="navbar" align="center">
         <a class="navaid" href="index.html">tDOM Overview</a>
- ·	<a class="navaid" href="doc-index.html">Table of Contents</a>
- ·	<a class="navaid" href="category-index.html">Index</a>
- ·	<a class="navaid" href="keyword-index.html">Keywords</a>
+ Â·	<a class="navaid" href="doc-index.html">Table of Contents</a>
+ Â·	<a class="navaid" href="category-index.html">Index</a>
+ Â·	<a class="navaid" href="keyword-index.html">Keywords</a>
 </div>
 </div>
 </body>
