--- a/expat.html
+++ b/expat.html
@@ -4,7 +4,7 @@
 </head><body>
 <div class="header">
 <div class="navbar" align="center">
-<a href="#SECTid0x80ac010">NAME</a> · <a href="#SECTid0x809e480">SYNOPSIS</a> · <a href="#SECTid0x80db0c0">DESCRIPTION</a> · <a href="#SECTid0x80dbe20">COMMAND OPTIONS</a> · <a href="#SECTid0x80a71e8"> COMMAND METHODS </a> · <a href="#SECTid0x80ee758">Callback Command Return Codes</a> · <a href="#SECTid0x80eeea8">SEE ALSO</a> · <a href="#SECTid0x80ef100">KEYWORDS</a>
+<a href="#SECTid0x80ac010">NAME</a> Â· <a href="#SECTid0x809e480">SYNOPSIS</a> Â· <a href="#SECTid0x80db0c0">DESCRIPTION</a> Â· <a href="#SECTid0x80dbe20">COMMAND OPTIONS</a> Â· <a href="#SECTid0x80a71e8"> COMMAND METHODS </a> Â· <a href="#SECTid0x80ee758">Callback Command Return Codes</a> Â· <a href="#SECTid0x80eeea8">SEE ALSO</a> Â· <a href="#SECTid0x80ef100">KEYWORDS</a>
 </div><hr class="navsep">
 </div><div class="body">
     <h2><a name="SECTid0x80ac010">NAME</a></h2><p class="namesection">
@@ -777,9 +777,9 @@ script out of this Tcl handler set and processing continues with the next
   </div><div class="footer">
 <hr class="navsep"><!-- footer.html: Standard navigational footer --><div class="navbar" align="center">
         <a class="navaid" href="index.html">tDOM Overview</a>
- ·	<a class="navaid" href="doc-index.html">Table of Contents</a>
- ·	<a class="navaid" href="category-index.html">Index</a>
- ·	<a class="navaid" href="keyword-index.html">Keywords</a>
+ Â·	<a class="navaid" href="doc-index.html">Table of Contents</a>
+ Â·	<a class="navaid" href="category-index.html">Index</a>
+ Â·	<a class="navaid" href="keyword-index.html">Keywords</a>
 </div>
 </div>
 </body>
