--- a/expatapi.html
+++ b/expatapi.html
@@ -4,7 +4,7 @@
 </head><body>
 <div class="header">
 <div class="navbar" align="center">
-<a href="#SECTid80ce268">NAME</a> · <a href="#SECTid80ce2e0">SYNOPSIS</a> · <a href="#SECTid80ce6f0">ARGUMENTS</a> · <a href="#SECTid80ceb28">DESCRIPTION</a> · <a href="#SECTid80cf500">SEE ALSO</a> · <a href="#SECTid80cf550">KEYWORDS</a>
+<a href="#SECTid80ce268">NAME</a> Â· <a href="#SECTid80ce2e0">SYNOPSIS</a> Â· <a href="#SECTid80ce6f0">ARGUMENTS</a> Â· <a href="#SECTid80ceb28">DESCRIPTION</a> Â· <a href="#SECTid80cf500">SEE ALSO</a> Â· <a href="#SECTid80cf550">KEYWORDS</a>
 </div><hr class="navsep">
 </div><div class="body">
     <h2><a name="SECTid80ce268">NAME</a></h2><p class="namesection">
@@ -41,23 +41,23 @@ TclGenExpatInfo*
 </tr></thead><tr class="syntax">
 <td class="type" width="20%" align="left">Tcl_Interp</td><td class="name" width="70%" align="left"><a name="ARG-interp">*interp</a></td><td class="mode" width="10%" align="center">in</td>
 </tr><tr class="desc">
-<td class="padding" width="20%"> </td><td class="argdesc" width="80%" align="left" colspan="2">Interpreter with the expat parser object.</td>
+<td class="padding" width="20%">Â </td><td class="argdesc" width="80%" align="left" colspan="2">Interpreter with the expat parser object.</td>
 </tr><tr class="syntax">
 <td class="type" width="20%" align="left">Tcl_Obj</td><td class="name" width="70%" align="left"><a name="ARG-expatObj">*expatObj</a></td><td class="mode" width="10%" align="center">in</td>
 </tr><tr class="desc">
-<td class="padding" width="20%"> </td><td class="argdesc" width="80%" align="left" colspan="2">A Tcl Object containing the command name of the expat parser object to be queried or modified.</td>
+<td class="padding" width="20%">Â </td><td class="argdesc" width="80%" align="left" colspan="2">A Tcl Object containing the command name of the expat parser object to be queried or modified.</td>
 </tr><tr class="syntax">
 <td class="type" width="20%" align="left">char</td><td class="name" width="70%" align="left"><a name="ARG-handlerSetName">*handlerSetName</a></td><td class="mode" width="10%" align="center">in</td>
 </tr><tr class="desc">
-<td class="padding" width="20%"> </td><td class="argdesc" width="80%" align="left" colspan="2">Identifier of the handler set.</td>
+<td class="padding" width="20%">Â </td><td class="argdesc" width="80%" align="left" colspan="2">Identifier of the handler set.</td>
 </tr><tr class="syntax">
 <td class="type" width="20%" align="left">CHandlerSet</td><td class="name" width="70%" align="left"><a name="ARG-handlerSet">*handlerSet</a></td><td class="mode" width="10%" align="center">in</td>
 </tr><tr class="desc">
-<td class="padding" width="20%"> </td><td class="argdesc" width="80%" align="left" colspan="2">Pointer to a C handler set.</td>
+<td class="padding" width="20%">Â </td><td class="argdesc" width="80%" align="left" colspan="2">Pointer to a C handler set.</td>
 </tr><tr class="syntax">
 <td class="type" width="20%" align="left">Tcl_Obj</td><td class="name" width="70%" align="left"><a name="ARG-nameObj">*nameObj</a></td><td class="mode" width="10%" align="center"></td>
 </tr><tr class="desc">
-<td class="padding" width="20%"> </td><td class="argdesc" width="80%" align="left" colspan="2">A Tcl Object containing the name of a expat parser object</td>
+<td class="padding" width="20%">Â </td><td class="argdesc" width="80%" align="left" colspan="2">A Tcl Object containing the name of a expat parser object</td>
 </tr>
 </table></div>
 
@@ -205,9 +205,9 @@ validation extension).</p>
 </div><div class="footer">
 <hr class="navsep"><!-- footer.html: Standard navigational footer --><div class="navbar" align="center">
         <a class="navaid" href="index.html">tDOM Overview</a>
- ·	<a class="navaid" href="doc-index.html">Table of Contents</a>
- ·	<a class="navaid" href="category-index.html">Index</a>
- ·	<a class="navaid" href="keyword-index.html">Keywords</a>
+ Â·	<a class="navaid" href="doc-index.html">Table of Contents</a>
+ Â·	<a class="navaid" href="category-index.html">Index</a>
+ Â·	<a class="navaid" href="keyword-index.html">Keywords</a>
 </div>
 </div>
 </body>
