--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 </head><body>
 <div class="header">
 <div class="navbar" align="center">
-<a href="#SECTid0x80a8258">NAME</a> · <a href="#SECTid0x80e3c50">Introduction</a> · <a href="#SECTid0x80bca38">Licence</a> · <a href="#SECTid0x80bcd98">Documentation</a> · <a href="#SECTid0x80bd158">Downloads</a> · <a href="#SECTid0x80bde28">GitHub</a> · <a href="#SECTid0x80bde29">Issues</a> · <a href="#SECTid0x80d3140">Mailing List</a> · <a href="#SECTid0x80d3490">Further Readings</a>
+<a href="#SECTid0x80a8258">NAME</a> Â· <a href="#SECTid0x80e3c50">Introduction</a> Â· <a href="#SECTid0x80bca38">Licence</a> Â· <a href="#SECTid0x80bcd98">Documentation</a> Â· <a href="#SECTid0x80bd158">Downloads</a> Â· <a href="#SECTid0x80bde28">GitHub</a> Â· <a href="#SECTid0x80bde29">Issues</a> Â· <a href="#SECTid0x80d3140">Mailing List</a> Â· <a href="#SECTid0x80d3490">Further Readings</a>
 </div><hr class="navsep">
 </div><div class="body">
   <h2><a name="SECTid0x80a8258">NAME</a></h2><p class="namesection">
@@ -13,7 +13,7 @@
 powerful Tcl scripting functionality. tDOM should be one of the fastest ways to
 manipulate XML with a scripting language and uses very little memory in the process (for example
 the DOM tree of the XML recommendation in XML (160K) needs only about 450K in
-memory)! The tDOM project was started by Jochen Löwer. It is currently
+memory)! The tDOM project was started by Jochen LÃ¶wer. It is currently
 maintained by Rolf Ade.</p><p>tDOM contains:</p><ul>
 
       <li>the newest version of Expat, the XML parser from James Clark,
@@ -79,7 +79,7 @@ other articles and papers with information about tDOM.</p><dl>
         <dt><a href="http://www.tu-harburg.de/skf/tcltk/papers2000/tDOM3.pdf">tDOM - A
 fast XML/DOM/XPath package for Tcl written in C</a></dt>
         <dd>This pdf document (1800 kByte, 19 pages) was written by the tDOM
-author Jochen Löwer on the occasion of his talk about tDOM at the First
+author Jochen LÃ¶wer on the occasion of his talk about tDOM at the First
 European Tcl/Tk User Meeting (15. Juni 2000) in Hamburg/Harburg. This paper
 treats tDOM Version 0.5a2 and is therefor a little bit outdated. But it's still
 the best available introduction into tDOMs architecture.</dd>
@@ -88,7 +88,7 @@ the best available introduction into tDOMs architecture.</dd>
       
         <dt><a href="documents/tclum2001-tdom.zip">tDOM - Update</a></dt>
         <dd>This pdf document includes the
-sheets of Jochen Löwers talk about tDOM held at the Second European Tcl/Tk User
+sheets of Jochen LÃ¶wers talk about tDOM held at the Second European Tcl/Tk User
 (7. Juli 2001). This talk was an "update" to Jochens talk at the First European
 Tcl/Tk User Meeting and therefor reflects the news and changes since 0.5a2 up
 to 0.63.</dd>
@@ -113,9 +113,9 @@ introduction into XSLT. The article presents its examples in terms of the tDOM e
 </div><div class="footer">
 <hr class="navsep"><!-- footer.html: Standard navigational footer --><div class="navbar" align="center">
         <a class="navaid" href="index.html">tDOM Overview</a>
- ·	<a class="navaid" href="doc-index.html">Table of Contents</a>
- ·	<a class="navaid" href="category-index.html">Index</a>
- ·	<a class="navaid" href="keyword-index.html">Keywords</a>
+ Â·	<a class="navaid" href="doc-index.html">Table of Contents</a>
+ Â·	<a class="navaid" href="category-index.html">Index</a>
+ Â·	<a class="navaid" href="keyword-index.html">Keywords</a>
 </div>
 </div>
 </body>
