--- a/keyword-index.html
+++ b/keyword-index.html
@@ -4,9 +4,9 @@
 </head><body>
 <div class="header">
 <h1 class="title" align="center">tDOM manual: Keywords</h1><p class="navaid" align="center">
-<a class="navaid" href="index.html">tDOM Overview</a> · <a class="navaid" href="doc-index.html">Table of Contents</a> · <a class="navaid" href="category-index.html">Index</a> · <a class="navaid" href="keyword-index.html">Keywords</a>
+<a class="navaid" href="index.html">tDOM Overview</a> Â· <a class="navaid" href="doc-index.html">Table of Contents</a> Â· <a class="navaid" href="category-index.html">Index</a> Â· <a class="navaid" href="keyword-index.html">Keywords</a>
 </p><hr class="navsep"><div class="navbar">
-<a href="#KEYWORDS-C">C</a> · <a href="#KEYWORDS-D">D</a> · <a href="#KEYWORDS-N">N</a> · <a href="#KEYWORDS-P">P</a> · <a href="#KEYWORDS-S">S</a> · <a href="#KEYWORDS-V">V</a> · <a href="#KEYWORDS-X">X</a> · </div>
+<a href="#KEYWORDS-C">C</a> Â· <a href="#KEYWORDS-D">D</a> Â· <a href="#KEYWORDS-N">N</a> Â· <a href="#KEYWORDS-P">P</a> Â· <a href="#KEYWORDS-S">S</a> Â· <a href="#KEYWORDS-V">V</a> Â· <a href="#KEYWORDS-X">X</a> Â· </div>
 </div><div class="body"><div class="table"><table width="100%">
 <tr class="header"><th colspan="2"><a name="KEYWORDS-C">Keywords: C</a></th></tr><tr>
 <td width="35%"><a name="KW-Chandlerset">C handler set</a></td><td width="65%">
@@ -45,9 +45,9 @@
 </table></div></div><div class="footer">
 <hr class="navsep"><!-- footer.html: Standard navigational footer --><div class="navbar" align="center">
         <a class="navaid" href="index.html">tDOM Overview</a>
- ·	<a class="navaid" href="doc-index.html">Table of Contents</a>
- ·	<a class="navaid" href="category-index.html">Index</a>
- ·	<a class="navaid" href="keyword-index.html">Keywords</a>
+ Â·	<a class="navaid" href="doc-index.html">Table of Contents</a>
+ Â·	<a class="navaid" href="category-index.html">Index</a>
+ Â·	<a class="navaid" href="keyword-index.html">Keywords</a>
 </div>
 </div>
 </body>
