--- a/tnc.html
+++ b/tnc.html
@@ -4,7 +4,7 @@
 </head><body>
 <div class="header">
 <div class="navbar" align="center">
-<a href="#SECTid80dfc18">NAME</a> · <a href="#SECTid80dfc90">SYNOPSIS</a> · <a href="#SECTid80dfce0">DESCRIPTION</a> · <a href="#SECTid80e06e0">BUGS</a> · <a href="#SECTid80e07d0">KEYWORDS</a>
+<a href="#SECTid80dfc18">NAME</a> Â· <a href="#SECTid80dfc90">SYNOPSIS</a> Â· <a href="#SECTid80dfce0">DESCRIPTION</a> Â· <a href="#SECTid80e06e0">BUGS</a> Â· <a href="#SECTid80e07d0">KEYWORDS</a>
 </div><hr class="navsep">
 </div><div class="body">
   <h2><a name="SECTid80dfc18">NAME</a></h2><p class="namesection">
@@ -136,9 +136,9 @@ inside a invalid DTD, not in the content of a document.</p>
 </div><div class="footer">
 <hr class="navsep"><!-- footer.html: Standard navigational footer --><div class="navbar" align="center">
         <a class="navaid" href="index.html">tDOM Overview</a>
- ·	<a class="navaid" href="doc-index.html">Table of Contents</a>
- ·	<a class="navaid" href="category-index.html">Index</a>
- ·	<a class="navaid" href="keyword-index.html">Keywords</a>
+ Â·	<a class="navaid" href="doc-index.html">Table of Contents</a>
+ Â·	<a class="navaid" href="category-index.html">Index</a>
+ Â·	<a class="navaid" href="keyword-index.html">Keywords</a>
 </div>
 </div>
 </body>
