--- a/dom.html
+++ b/dom.html
@@ -4,7 +4,7 @@
 </head><body>
 <div class="header">
 <div class="navbar" align="center">
-<a href="#SECTid0x80a7e40">NAME</a> · <a href="#SECTid0x80b1160">SYNOPSIS</a> · <a href="#SECTid0x80be788">DESCRIPTION </a> · <a href="#SECTid0x80cb7e0">KEYWORDS</a>
+<a href="#SECTid0x80a7e40">NAME</a> Â· <a href="#SECTid0x80b1160">SYNOPSIS</a> Â· <a href="#SECTid0x80be788">DESCRIPTION </a> Â· <a href="#SECTid0x80cb7e0">KEYWORDS</a>
 </div><hr class="navsep">
 </div><div class="body">
   <h2><a name="SECTid0x80a7e40">NAME</a></h2><p class="namesection">
@@ -426,9 +426,9 @@ recommendation. Otherwise it returns 0.</dd>
 </div><div class="footer">
 <hr class="navsep"><!-- footer.html: Standard navigational footer --><div class="navbar" align="center">
         <a class="navaid" href="index.html">tDOM Overview</a>
- ·	<a class="navaid" href="doc-index.html">Table of Contents</a>
- ·	<a class="navaid" href="category-index.html">Index</a>
- ·	<a class="navaid" href="keyword-index.html">Keywords</a>
+ Â·	<a class="navaid" href="doc-index.html">Table of Contents</a>
+ Â·	<a class="navaid" href="category-index.html">Index</a>
+ Â·	<a class="navaid" href="keyword-index.html">Keywords</a>
 </div>
 </div>
 </body>
