--- a/domNode.html
+++ b/domNode.html
@@ -4,7 +4,7 @@
 </head><body>
 <div class="header">
 <div class="navbar" align="center">
-<a href="#SECTid0x80a5e38">NAME</a> · <a href="#SECTid0x80aa470">SYNOPSIS</a> · <a href="#SECTid0x80d8428"> DESCRIPTION </a> · <a href="#SECTid0x80d09b8">SEE ALSO</a> · <a href="#SECTid0x80d0bd8">KEYWORDS</a>
+<a href="#SECTid0x80a5e38">NAME</a> Â· <a href="#SECTid0x80aa470">SYNOPSIS</a> Â· <a href="#SECTid0x80d8428"> DESCRIPTION </a> Â· <a href="#SECTid0x80d09b8">SEE ALSO</a> Â· <a href="#SECTid0x80d0bd8">KEYWORDS</a>
 </div><hr class="navsep">
 </div><div class="body">
   <h2><a name="SECTid0x80a5e38">NAME</a></h2><p class="namesection">
@@ -676,9 +676,9 @@ be executed. This allows quick method additions on Tcl level.</p>
 </div><div class="footer">
 <hr class="navsep"><!-- footer.html: Standard navigational footer --><div class="navbar" align="center">
         <a class="navaid" href="index.html">tDOM Overview</a>
- ·	<a class="navaid" href="doc-index.html">Table of Contents</a>
- ·	<a class="navaid" href="category-index.html">Index</a>
- ·	<a class="navaid" href="keyword-index.html">Keywords</a>
+ Â·	<a class="navaid" href="doc-index.html">Table of Contents</a>
+ Â·	<a class="navaid" href="category-index.html">Index</a>
+ Â·	<a class="navaid" href="keyword-index.html">Keywords</a>
 </div>
 </div>
 </body>
