--- a/tdomcmd.html
+++ b/tdomcmd.html
@@ -4,7 +4,7 @@
 </head><body>
 <div class="header">
 <div class="navbar" align="center">
-<a href="#SECTid0x80b2c78">NAME</a> · <a href="#SECTid0x80aac98">SYNOPSIS</a> · <a href="#SECTid0x80dc710">DESCRIPTION</a> · <a href="#SECTid0x80ab528">SEE ALSO</a> · <a href="#SECTid0x80db000">KEYWORDS</a>
+<a href="#SECTid0x80b2c78">NAME</a> Â· <a href="#SECTid0x80aac98">SYNOPSIS</a> Â· <a href="#SECTid0x80dc710">DESCRIPTION</a> Â· <a href="#SECTid0x80ab528">SEE ALSO</a> Â· <a href="#SECTid0x80db000">KEYWORDS</a>
 </div><hr class="navsep">
 </div><div class="body">
     <h2><a name="SECTid0x80b2c78">NAME</a></h2><p class="namesection">
@@ -97,9 +97,9 @@ object.</p></dd>
 </div><div class="footer">
 <hr class="navsep"><!-- footer.html: Standard navigational footer --><div class="navbar" align="center">
         <a class="navaid" href="index.html">tDOM Overview</a>
- ·	<a class="navaid" href="doc-index.html">Table of Contents</a>
- ·	<a class="navaid" href="category-index.html">Index</a>
- ·	<a class="navaid" href="keyword-index.html">Keywords</a>
+ Â·	<a class="navaid" href="doc-index.html">Table of Contents</a>
+ Â·	<a class="navaid" href="category-index.html">Index</a>
+ Â·	<a class="navaid" href="keyword-index.html">Keywords</a>
 </div>
 </div>
 </body>
